--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -15,17 +15,15 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Use Node.js 16.14.2
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
           node-version: 16.14.2
 
       - name: Install packages
-        run: |
-          npm ci
+        run: npm ci
 
       - name: Build
-        run: |
-          npm run build
+        run: npm run build
 
       - name: Run Lighthouse CI
         env:
